--- a/pom.xml
+++ b/pom.xml
@@ -35,13 +35,13 @@
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
+            <artifactId>spring-webmvc</artifactId>
             <version>5.3.25</version>
         </dependency>
         <dependency>
-            <groupId>org.bitbucket.swattu</groupId>
-            <artifactId>spring-mvc</artifactId>
-            <version>6.0.1</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>1.12.0</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
