--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,11 @@
 <!--            <version>2.18.0</version>-->
 <!--        </dependency>-->
         <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.5</version>
+        </dependency>
+        <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.11.0</version>
